control/plasma_df90.F90


      interface
         function PLASMA_dsygvd_Tile_c(itype,jobz,uplo,A,B,W,T,Q) &
          & bind(c, name='PLASMA_dsygvd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsygvd_Tile_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
          end function PLASMA_dsygvd_Tile_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_dsymm_Tile_c(side,uplo,alpha,A,B,beta,C) &
          & bind(c, name='PLASMA_dsymm_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsymm_Tile_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            real(kind=c_double), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            real(kind=c_double), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_dsymm_Tile_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_dsyr2k_Tile_c(uplo,trans,alpha,A,B,beta,C) &
          & bind(c, name='PLASMA_dsyr2k_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsyr2k_Tile_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            real(kind=c_double), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            real(kind=c_double), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_dsyr2k_Tile_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_dsyrk_Tile_c(uplo,trans,alpha,A,beta,C) &
          & bind(c, name='PLASMA_dsyrk_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsyrk_Tile_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            real(kind=c_double), value :: alpha
            type(c_ptr), value :: A
            real(kind=c_double), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_dsyrk_Tile_c
      end interface
#endif

      interface
         function PLASMA_dsytrd_Tile_c(jobz,uplo,A,D,E,T,Q,LDQ) &
          & bind(c, name='PLASMA_dsytrd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsytrd_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: D
            type(c_ptr), value :: E
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_dsytrd_Tile_c
      end interface

      interface
         function PLASMA_dlacpy_Tile_c(uplo,A,B) &
          & bind(c, name='PLASMA_dlacpy_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dlacpy_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function PLASMA_dlacpy_Tile_c
      end interface

      interface
         function PLASMA_dlange_Tile_c(norm,A) &
          & bind(c, name='PLASMA_dlange_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_double) :: PLASMA_dlange_Tile_c
            integer(kind=c_int), value :: norm
            type(c_ptr), value :: A
          end function PLASMA_dlange_Tile_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_dlansy_Tile_c(norm,uplo,A) &
          & bind(c, name='PLASMA_dlansy_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_double) :: PLASMA_dlansy_Tile_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_dlansy_Tile_c
      end interface
#endif

      interface
         function PLASMA_dlansy_Tile_c(norm,uplo,A) &
          & bind(c, name='PLASMA_dlansy_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_double) :: PLASMA_dlansy_Tile_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_dlansy_Tile_c
      end interface

      interface
         function PLASMA_dlantr_Tile_c(norm,uplo,diag,A) &
          & bind(c, name='PLASMA_dlantr_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_double) :: PLASMA_dlantr_Tile_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: diag
            type(c_ptr), value :: A
          end function PLASMA_dlantr_Tile_c
      end interface

      interface
         function PLASMA_dlaset_Tile_c(uplo,alpha,beta,A) &
          & bind(c, name='PLASMA_dlaset_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dlaset_Tile_c
            integer(kind=c_int), value :: uplo
            real(kind=c_double), value :: alpha
            real(kind=c_double), value :: beta
            type(c_ptr), value :: A
          end function PLASMA_dlaset_Tile_c
      end interface

      interface
         function PLASMA_dlaswp_Tile_c(A,K1,K2,IPIV,INCX) &
          & bind(c, name='PLASMA_dlaswp_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dlaswp_Tile_c
            type(c_ptr), value :: A
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function PLASMA_dlaswp_Tile_c
      end interface

      interface
         function PLASMA_dlaswpc_Tile_c(A,K1,K2,IPIV,INCX) &
          & bind(c, name='PLASMA_dlaswpc_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dlaswpc_Tile_c
            type(c_ptr), value :: A
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function PLASMA_dlaswpc_Tile_c
      end interface

      interface
         function PLASMA_dlauum_Tile_c(uplo,A) &
          & bind(c, name='PLASMA_dlauum_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dlauum_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_dlauum_Tile_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_dplgsy_Tile_c(bump,A,seed) &
          & bind(c, name='PLASMA_dplgsy_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dplgsy_Tile_c
            real(kind=c_double), value :: bump
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function PLASMA_dplgsy_Tile_c
      end interface
#endif

      interface
         function PLASMA_dplgsy_Tile_c(bump,A,seed) &
          & bind(c, name='PLASMA_dplgsy_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dplgsy_Tile_c
            real(kind=c_double), value :: bump
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function PLASMA_dplgsy_Tile_c
      end interface

      interface
         function PLASMA_dplrnt_Tile_c(A,seed) &
          & bind(c, name='PLASMA_dplrnt_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dplrnt_Tile_c
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function PLASMA_dplrnt_Tile_c
      end interface

      interface
         function PLASMA_dpltmg_Tile_c(mtxtype,A,seed) &
          & bind(c, name='PLASMA_dpltmg_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dpltmg_Tile_c
            integer(kind=c_int), value :: mtxtype
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function PLASMA_dpltmg_Tile_c
      end interface

      interface
         function PLASMA_dpocon_Tile_c(uplo,A,anorm,rcond) &
          & bind(c, name='PLASMA_dpocon_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dpocon_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            real(kind=c_double), value :: anorm
            type(c_ptr), value :: rcond
          end function PLASMA_dpocon_Tile_c
      end interface

      interface
         function PLASMA_dposv_Tile_c(uplo,A,B) &
          & bind(c, name='PLASMA_dposv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dposv_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function PLASMA_dposv_Tile_c
      end interface

      interface
         function PLASMA_dpotrf_Tile_c(uplo,A) &
          & bind(c, name='PLASMA_dpotrf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dpotrf_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_dpotrf_Tile_c
      end interface

      interface
         function PLASMA_dpotri_Tile_c(uplo,A) &
          & bind(c, name='PLASMA_dpotri_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dpotri_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_dpotri_Tile_c
      end interface

      interface
         function PLASMA_dpotrs_Tile_c(uplo,A,B) &
          & bind(c, name='PLASMA_dpotrs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dpotrs_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function PLASMA_dpotrs_Tile_c
      end interface

      interface
         function PLASMA_dsymm_Tile_c(side,uplo,alpha,A,B,beta,C) &
          & bind(c, name='PLASMA_dsymm_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_dsymm_Tile_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            real(kind=c_double), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            real(kind=c_double), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_dsymm_Tile_c
      end interface
